goofit_add_library(PdfBasic
    ArgusPdf.cu
    BWPdf.cu
    BifurGaussPdf.cu
    BinTransformPdf.cu
    CorrGaussianPdf.cu
    CrystalBallPdf.cu
    ExpGausPdf.cu
    ExpPdf.cu
    GaussianPdf.cu
    InterHistPdf.cu
    JohnsonSUPdf.cu
    KinLimitBWPdf.cu
    LandauPdf.cu
    NovosibirskPdf.cu
    PolynomialPdf.cu
    ScaledGaussianPdf.cu
    SmoothHistogramPdf.cu
    StepPdf.cu
    TrigThresholdPdf.cu
    VoigtianPdf.cu
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/ArgusPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/BWPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/BifurGaussPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/BinTransformPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/CorrGaussianPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/CrystalBallPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/ExpGausPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/ExpPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/GaussianPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/InterHistPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/JohnsonSUPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/KinLimitBWPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/LandauPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/NovosibirskPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/PolynomialPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/ScaledGaussianPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/SmoothHistogramPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/StepPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/TrigThresholdPdf.h
    ${PROJECT_SOURCE_DIR}/include/goofit/PDFs/basic/VoigtianPdf.h
    )

target_link_libraries(PdfBasic PUBLIC PDFCore)
